[gd_scene load_steps=9 format=3 uid="uid://bd1wkqf8m3k1r"]

[ext_resource type="Texture2D" uid="uid://dgksueboibmvx" path="res://assets/Progress Bar/Starbox main shadow.png" id="1_am3uw"]
[ext_resource type="Script" uid="uid://6lbj5otus05w" path="res://components/GeneralLevel/PopupWin/popup_win.gd" id="1_jdntc"]
[ext_resource type="Texture2D" uid="uid://cxr7ruvego03w" path="res://assets/Progress Bar/Progress bar original.png" id="2_jdntc"]
[ext_resource type="Texture2D" uid="uid://djertenq4maj2" path="res://assets/Progress Bar/Starbox main star.png" id="2_p0j6x"]
[ext_resource type="Texture2D" uid="uid://cqj15iu2i6mgm" path="res://assets/Progress Bar/Progress bar color changing.png" id="3_p0j6x"]
[ext_resource type="Texture2D" uid="uid://fp2hb627b6fa" path="res://assets/Progress Bar/Duba original.png" id="4_nuyn0"]
[ext_resource type="Texture2D" uid="uid://c1fdyd5a1k6mf" path="res://assets/Buttons/Button home.png" id="4_w6qqf"]

[sub_resource type="LabelSettings" id="LabelSettings_w6qqf"]
font_size = 30

[node name="PopupWin" type="Popup"]
initial_position = 1
size = Vector2i(430, 745)
visible = true
script = ExtResource("1_jdntc")
star_on = ExtResource("2_p0j6x")
star_off = ExtResource("1_am3uw")
home_icon = ExtResource("4_w6qqf")
next_icon = ExtResource("4_w6qqf")
replay_icon = ExtResource("4_w6qqf")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_right = 270.0
offset_bottom = 960.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Skor" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2
text = "SKOR KAMU"
label_settings = SubResource("LabelSettings_w6qqf")

[node name="Stars" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 120.0
offset_right = 20.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="Star1" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("1_am3uw")
expand_mode = 3

[node name="Star2" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("1_am3uw")
expand_mode = 3

[node name="Star3" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("1_am3uw")
expand_mode = 3

[node name="ScoreBar" type="TextureProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.0
offset_top = 75.0
offset_right = 135.0
offset_bottom = 345.0
grow_horizontal = 2
nine_patch_stretch = true
texture_under = ExtResource("2_jdntc")
texture_progress = ExtResource("3_p0j6x")

[node name="Icon" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.0
offset_top = 157.0
offset_right = -73.0
offset_bottom = 221.0
grow_horizontal = 2
texture = ExtResource("4_nuyn0")
expand_mode = 3

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_top = 250.0
offset_right = 116.5
offset_bottom = 325.0
grow_horizontal = 2

[node name="Home" type="Button" parent="Panel/Buttons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "HOME"
icon = ExtResource("4_w6qqf")
icon_alignment = 1
expand_icon = true

[node name="Next" type="Button" parent="Panel/Buttons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "NEXT"
icon = ExtResource("4_w6qqf")
icon_alignment = 1
expand_icon = true

[node name="Replay" type="Button" parent="Panel/Buttons"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "REPLAY"
icon = ExtResource("4_w6qqf")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Panel/Buttons/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Panel/Buttons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Panel/Buttons/Replay" to="." method="_on_replay_pressed"]
